VID-42: Introduce VAVR and samples